trying css update to avoid video cropping off screen

--- a/docs/scrolly-styles.css
+++ b/docs/scrolly-styles.css
@@ -8,9 +8,9 @@
     top: 0;
     transform: translate(0px, 0px);
     z-index: 1;
-    height: 100svh;
-    width: 100vw;
-    margin: 0;
+    width: 100vwmin;
+    height: 100vmin;
+    margin: 0 auto;
     overflow: hidden;
     /* Center everything inside */
     /* display: flex;
@@ -36,8 +36,9 @@
 .scrolly-container video {
     position: absolute;
     top: 0;
-    height: auto;
+    height: 100%;
     width: 100%;
+    object-fit: cover;
 }
 
 .sticky-thing iframe {
